Changes for 3.0.6rc1

New features:
..FG.....T [ZBXNEXT-3487] added new key for virtual memory monitoring on Windows (vso, wiper)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
..F....... [ZBX-10388] removed duplicated data and reduced traffic for hint popups (Gunars)
..F....... [ZBX-11331] fixed JS error in Configuration->Discovery edit page (Oleg)
...G...... [ZBX-10906] fixed agent active checks being delayed if system time was pushed back (wiper)
....I..... [ZBX-11038] removed compression for the generated CSS files, added "sass" folder to the distribution archive (asaveljevs)
....I..... [ZBX-11335] added MariaDB database support when compiling with --with-mysql configuration option; thanks to Dmitry Smirnov for patch (viktors)
...G...PS. [ZBX-11122] fixed comparisons between signed and unsigned integer expressions to eliminate build warnings (Sergejs)
A......... [ZBX-10842] fixed sql error when updating httptest with applicationid and without httpstepid parameters (Cemeris)
A......... [ZBX-10842] prevented disappearing of step items when updating httptest without applicationid, httpstepid parameters (Cemeris)
A......... [ZBX-10842] fixed connecting web scenario applicationid to created steps when updating with API httptest.update mehtod (Cemeris)
..F....... [ZBX-9656] prevented updating comments for discovered triggers (Ivo)
..F....PS. [ZBX-11221] fixed MySQL connection issue by overriding user defined auto commit setting (Oleg, vso)
A......... [ZBX-11291] fixed LLD rule not validating "lifetime" field (Ivo)
..F....... [ZBX-11209] fixed visual bugs in various browsers (Pavel, Sasha)
..F....... [ZBX-10958] fixed displaying of user name for inaccessible users; fixed warnings in PHPUnit test; fixed undefined offsets in screen "Action logs" (Gunars)